flame-runtime/testsuite/tests/constraints/should_fail/all.T
test('flTFail001', normal, compile_fail, [''])
test('flTFail002', normal, compile_fail, [''])
test('eqTFail001', normal, compile_fail, [''])
test('inferPcFail001', normal, compile_fail, [''])
